fixed alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -547,8 +547,8 @@ section.invo {
   margin-top: 27px;
 }
 section.invo{
-  background-image: url(../images/icons/Group22.png),url(../images/icons/Group23.png),url(../images/icons/Polygon29.jpg);  
-  background-position: top 143px left 38px,bottom 88px right 0,top 122px right 234px;
+  background-image: url(../images/icons/Group22.png),url(../images/icons/Group23.png),url(../images/icons/Polygon29.svg);  
+  background-position: top 143px left 38px,bottom 88px right 0,top 120px right 297px;
   background-repeat: no-repeat;
 }
 
@@ -675,16 +675,20 @@ margin: 0px 12px;
   box-shadow: 0px 1px 4px rgb(26 35 42 / 15%);
   border-radius: 0px 0px 12px 12px;
   padding-top: 16px;
+  padding-bottom: 20px;
 }
 .ourteam ul{
-  padding: 5px 0 16px 0;
+  padding:0;
 }
 .ourteam ul li {
   text-decoration: none;
   list-style: none;
-  padding: 0 16px 0 0;
+  padding: 0 29px 0 0;
   margin: 0;
   display: inline-block;
+}
+.ourteam ul li:nth-last-child(1) {
+  padding-right: 0;
 }
 
 .offer-bg {
@@ -716,7 +720,24 @@ margin: 0px 12px;
 .ourteam-sec .slick-slide img{
   width: 100%;
 }
-
+p.ot-ttle {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 135%;
+  letter-spacing: -0.01em;
+  margin-bottom: 2px;
+}
+p.ot-desig {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 135%;
+  letter-spacing: -0.01em;
+  color:var(--primary-color)
+}
 
 .row.pr-cont{
   display: flex;
