--- a/slick/slick-theme.css
+++ b/slick/slick-theme.css
@@ -99,7 +99,7 @@
 
 .slick-next
 {
-    right: -25px;
+    right: -46px;
     box-shadow: 0px 7.95px 23.85px rgb(0 0 0 / 12%);
     border-radius: 132.5px;
     width: 50px;
